synaptic (0.80~exp2) UNRELEASEDexperimental; urgency=low

  [ Robert Roth ]
  * merged lp: ~bkerensa/synaptic/fix-for-1153409
    thanks to Benjamin Kerensa:
      - Fix Typo
      - Add Homepage Field to debian/control

  [ Michael Vogt ]
  * po/de.po:
    - fix typo, thanks to Zac Diggum 

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 18 Apr 2013 19:58:29 +0200

synaptic (0.80~exp1) experimental; urgency=low

  [ Robert Roth ]
  * Disables typeahead in summary dialog, as it doesn't do anything, 
    so it's unnecesary (LP: #24319)
  * Move up and Move down buttons in columns preferences changed to 
    respect buttons_have_icons preference (LP: #66574)
  * Set the title of the package properties dialog opened for the first 
    time (it has not been set before, so it was synaptic the first time 
    the dialog has been opened) (LP: #932495)
  * Added a reload button to the repositories changed dialog (LP: #78987)
  * Updated the wording of the expander on the download progress dialog to 
    Show individual files" instead of "Show for individual files"
    (LP: #301428)
  * Fixed inconsistencies between column namings in column headers and 
    column visibility preferences (LP: #335723)
  * Linkified maintainer label in the package properties dialog 
    when running as non-root (LP: #321380)
  * Added package name in the warning scaring you about breaking your 
    system (LP: #63974)
  * Added name of the application (Synaptic Package Manager) in the 
    titleless dialog shown when starting without administrative 
    privilegess (LP: #510261)
  * Improved filter editing checkbox tooltips (LP: #790420)
  * Made all the property values from the package properties dialog 
    selectable (LP: #173464)
  * Changed Package Properties accelerator from Ctrl+O to widely used 
    (nautilus, eog, evince etc) Alt+Enter (LP: #933554)
  * Use the synaptic icon from the user's icon theme, or fall back to