@@ -9,6 +9,11 @@ synaptic (0.80~exp2) UNRELEASEDexperimental; urgency=low
   [ Michael Vogt ]
   * po/de.po:
     - fix typo, thanks to Zac Diggum 
+  
+  [ Patrik Lundquist ]
+  * common/rpackage.cc:
+    - fix crash when srcPackage does not have a version
+      (LP: #1097532)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 18 Apr 2013 19:58:29 +0200
 
